...
                        )
                    }
                PresetsView()
                    .tag(AppTab.presets)
                    .tabItem {
                        AppTabLabel(
                            title: "Presets",
                            symbol: "slider.horizontal.3",
                            color: .systemOrange
                        )
                    }
                StatsView()
                    .tag(AppTab.stats)
                    .tabItem {
                        AppTabLabel(
                            title: "Stats",
                            symbol: "chart.bar.fill",
                            color: .systemGreen
                        )
                    }
                OptionsView()
                    .tag(AppTab.settings)
...
